# sis

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  README-DEV.md  README.md  USAGE.md
crates/sis-pdf-detectors/: Cargo.toml
crates/sis-pdf-detectors/src/: actions_triggers.rs  advanced_crypto.rs  content_first.rs  evasion_env.rs  evasion_time.rs  external_context.rs  filter_chain_anomaly.rs  filter_depth.rs  image_analysis.rs  ir_graph_static.rs  js_polymorphic.rs  js_sandbox.rs  js_signals.rs  lib.rs  multi_stage.rs  objstm_summary.rs  page_tree_anomalies.rs  polyglot.rs  strict.rs  supply_chain.rs  uri_classification.rs  xfa_forms.rs
crates/sis-pdf-detectors/tests/: js_sandbox_integration.rs
crates/ysnp-cli/: Cargo.toml
crates/ysnp-cli/src/: main.rs
docs/: Gemfile  README.md  _config.yml  analysis.md  config.toml  configuration.md  corpus-findings-deep-analysis.md  findings.md  implementation-status-20260111.md  index.md  ir-org-graph.md  modeling.md  mwb-corpus-reporting.md  pdf-cheat-sheet.md  pdf-state-of-the-art.md  query-errors.md  query-interface.md  query-predicates.md  risk-profiling.md  roadmap-003.md  roadmap-005.md  roadmap.md  sec-review.md  ysnp-spec.md
fuzz/: Cargo.toml
fuzz/corpus/graph/: README.md
fuzz/fuzz_targets/: decode_streams.rs  graph.rs  lexer.rs  objstm.rs  parser.rs
plans/: 20250110-graph-query.md  20260109-ml-signals-and-explainability-progress-review.md  20260109-ml-signals-and-explainability.md  20260109-temporal-analysis.md  20260111-otr-download.md  20260111-updates-from-scans.md  20260112-content-first-pipeline-tracking.md  20260112-js-sandbox.md  20260112-robustness-next-steps.md  20260118-cleanup.md  20260119-query-uplift-plan.md  ir-plan.md  ir-static.md  (+4 more)
(+130 files in other folders)
