[package]
name = "sis-pdf-detectors"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
hex = "0.4"
sha2 = "0.10"
sis-pdf-core = { path = "../sis-pdf-core" }
sis-pdf-pdf = { path = "../sis-pdf-pdf" }
base64 = "0.22"
boa_parser = { version = "0.21", optional = true }
boa_ast = { version = "0.21", optional = true }
boa_engine = { version = "0.21", optional = true }
boa_interner = { version = "0.21", optional = true }

[features]
default = ["js-ast", "js-sandbox"]
js-ast = ["boa_parser", "boa_ast", "boa_interner"]
js-sandbox = ["boa_engine"]
