[package]
name = "ysnp-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
memmap2 = "0.9"
serde_json = "1.0"
ysnp-core = { path = "../ysnp-core" }
ysnp-detectors = { path = "../ysnp-detectors" }
ysnp-pdf = { path = "../ysnp-pdf" }
